# PowerPC-VLE-Extension

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  binja.patch  library.cpp  library.h  plugin.json  vle_ext.cpp  vle_ext.h
.github/workflows/: 3.5-_0001-Support-building-plugins-without-an-install.patch  4.0+_0001-Support-building-plugins-without-an-install.patch  4.0-and-prior.patch  build.yaml
